fix video input alignment

--- a/frontend/src/pages/styles/Library.module.css
+++ b/frontend/src/pages/styles/Library.module.css
@@ -204,7 +204,7 @@ h3 {
 	outline: none;
 	font-family: 'Montserrat';
 	font-style: normal;
-	font-weight: 200;
+	font-weight: 550;
 	font-size: 16px;
 	/* line-height: 22px; */
 	color: black;
@@ -214,6 +214,24 @@ h3 {
 	width: 250px;
     align-items: center;
     justify-content: center;
-	
+
+}
+
+.videotext {
+	text-align: center;
+	border: none;
+	outline: none;
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 500;
+	font-size: 16px;
+	/* line-height: 22px; */
+	color: black;
+	background-color:  rgb(217, 233, 240);
+	margin-left: 2rem;
+	margin-top: 10px;
+	width: 250px;
+    align-items: center;
+    justify-content: center;
 
 }
